# genai-app-docs

./: .dockerignore  .env.example  .env.local.example  .env.production.example  .env.staging.example  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  API_BACKEND_REQUEST.md  API_FRONTEND_GAP_ANALYSIS.md  API_FRONTEND_GAP_SOLUTION.md  API_GAP_ANALYSIS.md  API_SPECIFICATION.md  CORRECTION_REPORT.md  DOCKER_COMPOSE_GUIDE.md  DOCUMENTATION_CHECKLIST.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  IMPLEMENTATION_VS_DOCUMENTATION_DETAILED_REPORT.md  README.md  SECURITY_ENHANCEMENTS.md  SKIPPED_TESTS_REPORT.md  TEST_RESULTS_SUMMARY.md  alembic.ini  azure-pipelines.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  fix_imports.py  import_update_summary.txt  permission-system-redesign.md  pyproject.toml
.azure/: PIPELINE_GUIDE.md
.azure/pipelines/templates/: build-template.yml  deploy-template.yml
.azure/pipelines/variables/: common.yml  dev.yml  prod.yml
.claude/: README.md  settings.json  settings.local.json
.claude/agents/: backend-code-reviewer.md  backend-developer.md  frontend-code-reviewer.md  frontend-developer.md
.claude/commands/backend/: api.md  fix-backend.md  model.md  review-backend.md  test-backend.md
.claude/commands/frontend/: component.md  feature.md  fix.md  optimize.md  review.md  test.md
.claude/commands/issue/: README.md  issue-clean.md  issue-dev.md  issue-finish.md  issue-list.md  issue-start.md  issue.md
.claude/commands/scripts/: issue-clean.sh  issue-finish.sh  issue-list.sh  issue-start.sh
.claude/commands/shared/: status.md
.claude/docs/: CLAUDE.md
.claude/skills/backend/: README.md  api-design.md  architecture.md  coding-standards.md  project-overview.md  testing.md
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  training_tracker_complete_component_list.md  training_tracker_pages_components_architecture.md
detailed-design/: 01-models.md  02-schemas.md  03-repositories.md  04-services.md  05-api-routes.md  06-middleware.md  07-api-extensions.md
docs/: README.md  permission-system-redesign.md  restful-order-checklist.md
docs/01-getting-started/: 01-prerequisites.md  01-setup.md  02-quick-start.md  02-windows-setup.md  02-wsl2-docker-setup.md  03-database-setup.md  03-vscode-setup.md  03-windows-setup.md  04-environment-config.md  05-quick-start.md  06-project-overview.md  07-database-basics.md
docs/02-architecture/: 01-project-structure.md  02-layered-architecture.md  03-dependency-injection.md  04-code-reading-guide.md
docs/03-core-concepts/: 01-tech-stack.md  02-database-design.md
docs/03-core-concepts/01-tech-stack/: 01-web.md  02-data.md  03-ai-tools.md  index.md
docs/03-core-concepts/02-database-design/: index.md
docs/03-core-concepts/03-security/: 01-authentication.md  02-request-protection.md  03-data-protection.md  04-infrastructure.md  05-best-practices.md  index.md
docs/04-development/01-coding-standards/: 01-basic-principles.md  02-design-principles.md  03-readable-code.md  04-naming-conventions.md  05-python-rules.md  06-fastapi-rules.md  07-tools-setup.md
docs/04-development/02-layer-implementation/: 01-models.md  02-schemas.md  03-repositories.md  04-services.md  05-api.md
docs/04-development/03-database/: 01-sqlalchemy-basics.md  02-model-relationships.md  03-alembic-migrations.md  04-query-patterns.md
docs/04-development/03-decorators/: index.md
docs/04-development/04-api-design/: 01-endpoint-design.md  02-validation.md  03-response-design.md  04-pagination.md  05-error-responses.md
docs/04-development/04-database/: 01-sqlalchemy-basics.md  02-model-relationships.md  03-alembic-migrations.md  04-query-patterns.md
docs/04-development/05-api-design/: 01-api-overview.md  01-endpoint-design.md  02-endpoint-design.md  02-validation.md  03-response-design.md  04-pagination.md  04-response-design.md  05-error-responses.md  06-error-responses.md
docs/04-development/05-security/: 01-authentication.md  02-authorization.md  03-best-practices.md
docs/04-development/06-security/: 01-authentication.md  03-best-practices.md
docs/04-development/07-testing/: index.md
docs/05-testing/: 01-testing-strategy.md  02-unit-testing.md  03-api-testing.md  04-database-testing.md  05-mocks-fixtures.md  06-best-practices.md  README_UPDATES.md
docs/05-testing/01-testing-strategy/: index.md
docs/05-testing/02-unit-testing/: index.md
docs/05-testing/03-api-testing/: index.md
docs/05-testing/04-database-testing/: 01-setup.md  index.md
docs/05-testing/05-mocks-fixtures/: index.md
docs/05-testing/06-best-practices/: index.md
docs/06-guides/: 01-add-endpoint.md  02-add-model.md  03-add-feature.md  04-file-upload.md  05-background-tasks.md  06-deployment.md  07-troubleshooting.md
docs/06-guides/01-add-endpoint/: index.md
docs/06-guides/02-add-model/: index.md
docs/06-guides/03-add-feature/: 01-models.md  02-schemas-repos.md  index.md  (+1 more)
docs/07-reference/: 01-api-specification.md  02-database-schema.md  03-environment-variables.md  04-utils.md  05-resources.md
docs/api/: api-docs.html  openapi.json  redoc.html
docs/design/: 00-design-documents-index.md
docs/specifications/: README.md
scripts/: create-multiple-databases.sh  dev.ps1  generate_openapi_docs.py  inspect_driver_tree_pkl.py  migrate_driver_tree_data.py  reset-database.ps1  reset-environment.ps1  seed_templates.py  setup-windows.ps1  setup-wsl2.sh  setup_dev_admin.py  start-postgres.ps1  update_dev_user_sql.py
scripts/convert_raw_to_json/: driver_trees.json  dt_category.txt  prepare_driver_tree_row_data.py
scripts/lib/: common.ps1
src/: alembic.ini
src/alembic/: env.py
src/app/: __init__.py  config.py  database.py  main.py
tests/: conftest.py  test_api.py  test_models.py  test_repositories.py  test_services.py
tests/app/: __init__.py
tests/fixtures/: __init__.py  excel_helper.py
tests/helpers/: __init__.py  assertions.py
(+1114 files in other folders)
