[project]
name = "camp-backend"
version = "0.1.0"
description = "AI Agent application with file upload/download capabilities"
readme = "README.md"
authors = [{ name = "koshiro.nomura", email = "koshiro.nomura@accenture.com" }]
requires-python = ">=3.13"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # AI/LangChain
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langserve>=0.3.0",
    "langsmith>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.30.0",
    # File Processing
    "python-multipart>=0.0.17",
    "aiofiles>=24.1.0",
    "azure-storage-blob>=12.23.0",
    "azure-identity>=1.19.0",
    # Configuration & Utilities
    "pydantic-settings>=2.6.0",
    "pydantic[email]>=2.0.0",
    "python-dotenv>=1.0.0",
    # Logging
    "structlog>=24.4.0",
    # HTTP Client
    "httpx>=0.28.1",
    # Security
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    # Cache
    "redis[hiredis]>=6.4.0",
    # Monitoring
    "prometheus-client>=0.23.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
]

[project.scripts]
camp-backend = "app.main:main"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.0",
    "types-aiofiles>=25.1.0.20251011",
    "types-redis>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 140
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "B008", # Function call in argument defaults (FastAPI pattern)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "skip_db: データベース不要のユニットテスト",
]
